# example-nginx-custom-headers

./: Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
nginx_custom_headers/: __init__.py  __main__.py
tests/: conftest.py
